* Added 'font' property to engine/combat_text.txt config.
* New mouse movment behavior. Click once to move the player to a target and, if applicable, interact with it.
* Stats on the character page are now organized by categories: Core, Offense, Defense, and Misc.
* Speed and Attack Speed are now able to be shown in the Character menu.
* Android: Enabled use of external input devices (gamepads, keyboards, mice)

Engine fixes:

* Fixed equipment not being visible on the load game menu in cases where an item is shared across multiple equipment sets.
* Fix potential crash in WidgetTabControl when trying to set an active tab when there is no tab already active.
* Fix unintended file appending when loading mod metadata
* Fix potential crash when tileset image can't be loaded.
* Fix bonuses to primary stats being incorrectly assigned when arbitrary resource stats are used.
* Fix leaked effect animations when an effect's animation property was redefined.
* Fix invalid memory access when consuming a corpse after a map change
* Fix crash when a book has a blank text item
* Fix memory leak from dropped loot
* Fix memory leak when a power's animation property was redefined.
* Display min/max damage and absorb stats on single lines in the Character menu
* Show power base damage type in tooltips if no damage modifier is set
* Fix input state not being correctly reset after using a gamepad analog control
* Increase default audio playback samplerate to 44100Hz from 22050Hz. This can now be adjusted in the user's settings.txt file.
* Fix leaked animation when Power entire power was redefined.
* Fix power.target_neighbor not using the starting_pos as the origin point.
* Fixed crash in Power tooltips when base_damage was not defined.
* Fix incorrect power level being shown in the action bar tooltips for upgraded powers.
* Fixed behavior of target_neighbor when a Power wasn't using 'starting_pos=source'.
* Fixed Power target validity not respecting the 'movement_type' property.